@@ -1458,8 +1458,8 @@ ZEND_API void ZEND_FASTCALL zend_hash_apply(HashTable *ht, apply_func_t apply_fu
 	HT_ASSERT(GC_REFCOUNT(ht) == 1);
 
 	HASH_PROTECT_RECURSION(ht);
-	p = ht->arData;
-	for (idx = 0; idx < ht->nNumUsed; idx++, p++) {
+	for (idx = 0; idx < ht->nNumUsed; idx++) {
+		p = ht->arData + idx;
 		if (UNEXPECTED(Z_TYPE(p->val) == IS_UNDEF)) continue;
 		result = apply_func(&p->val);
 
@@ -1484,8 +1484,8 @@ ZEND_API void ZEND_FASTCALL zend_hash_apply_with_argument(HashTable *ht, apply_f
 	HT_ASSERT(GC_REFCOUNT(ht) == 1);
 
 	HASH_PROTECT_RECURSION(ht);
-	p = ht->arData;
-	for (idx = 0; idx < ht->nNumUsed; idx++, p++) {
+	for (idx = 0; idx < ht->nNumUsed; idx++) {
+		p = ht->arData + idx;
 		if (UNEXPECTED(Z_TYPE(p->val) == IS_UNDEF)) continue;
 		result = apply_func(&p->val, argument);
 
@@ -1513,8 +1513,8 @@ ZEND_API void ZEND_FASTCALL zend_hash_apply_with_arguments(HashTable *ht, apply_
 
 	HASH_PROTECT_RECURSION(ht);
 
-	p = ht->arData;
-	for (idx = 0; idx < ht->nNumUsed; idx++, p++) {
+	for (idx = 0; idx < ht->nNumUsed; idx++) {
+		p = ht->arData + idx;
 		if (UNEXPECTED(Z_TYPE(p->val) == IS_UNDEF)) continue;
 		va_start(args, num_args);
 		hash_key.h = p->h;
@@ -1547,10 +1547,9 @@ ZEND_API void ZEND_FASTCALL zend_hash_reverse_apply(HashTable *ht, apply_func_t 
 
 	HASH_PROTECT_RECURSION(ht);
 	idx = ht->nNumUsed;
-	p = ht->arData + idx;
 	while (idx > 0) {
 		idx--;
-		p--;
+		p = ht->arData + idx;
 		if (UNEXPECTED(Z_TYPE(p->val) == IS_UNDEF)) continue;
 
 		result = apply_func(&p->val);
